# diershij

./: .gitignore  CLAUDE.md  README.en.md  README.md  build-desktop.bat  start-all.ps1  stop-all.ps1  停止游戏.bat  启动游戏.bat  完善步骤.md
.claude/: settings.local.json
.github/workflows/: ci.yml  docker.yml
.monkeycode/docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  INDEX.md  INTERFACES.md
client/: index.html  package.json  tailwind.config.js  vite.config.ts
client/src/: App.tsx  index.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: lib.rs
cultivation-bubbletea/: go.mod  go.sum
cultivation-bubbletea/cmd/: main.go
cultivation-client-cli/: go.mod
cultivation-client-cli/cmd/: main.go
cultivation-client-go/: API文档.md  go.mod  go.sum
cultivation-client-go/cmd/: main.go
go-client/: go.mod  go.sum
server/: config.json  docker-compose.yml  go.work  go.work.sum  install-protoc.ps1  stress_test_report.txt  test_all_ops.py  test_breakthrough.py  test_comprehensive.py  test_full.py  test_stress.py  test_workflows.py  test_ws.py
server/ai-scheduler/: Dockerfile  go.mod  go.sum
server/game-server/: Dockerfile  go.mod  go.sum
server/gateway/: Dockerfile  go.mod  go.sum
server/heavenly-dao/: Dockerfile  go.mod  go.sum
server/init-db/: 01_init.sql  02_game_operations.sql  03_fix_missing.sql  04_add_extra_attributes.sql  05_friends.sql  06_add_password_hash.sql  07_add_name_unique.sql  08_add_spiritual_roots_methods.sql  09_add_method_seed_data.sql  09_complete_schema.sql  10_mail.sql  10_shops.sql  11_npcs.sql  12_world_state.sql  (+1 more)
(+246 files in other folders)
