[package]
name = "cultivation-client"
version = "0.1.0"
description = "修仙世界桌面客户端"
authors = ["Cultivation World Team"]
edition = "2021"

[lib]
name = "cultivation_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
